<resources>
    <string name="app_name">C3S2Contactos</string>
    <string name="nombre_completo_hint">Nombre completo</string>
    <string name="fecha_de_nacimiento_hint">Fecha de nacimiento</string>
    <string name="telefono_hint">Teléfono</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="descripcion_contacto_hint">Descripción del contacto</string>
    <string name="siguiente">Siguiente</string>
    <string name="tvTitulo_confirmar">Confirmar contacto</string>
    <string name="detalles_descripcion_hint">Descripción</string>
    <string name="btnEditarDatos">Editar datos</string>
    <string name="errorAlEditar">Error al editar</string>
    <string name="errorAlVerDetalles">Error al ver detalles</string>
    <string name="errorAlIniciar">Error al iniciar</string>
</resources>